# CustomPlayer

./: .clangd  .gitignore  .qmlls.ini  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE.md  Makefile  README.md  android.sh  config.h.in  desktop.sh  precompiled.h  qmlls.ini.in
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Arch.yml  cmake-multi-platform.yml
Arch/: PKGBUILD
android/: AndroidManifest.xml
example/: main.cpp
res/: Resources.qrc  Style.qss  customplayer.desktop
res/Icons/: Icons.txt
src/: CMakeLists.txt  Convert.cpp  Player.cpp  main.cpp  precompiled.h  sanitize.h  tmpmain.cpp
src/Audio/: AudioServer.h  PipeWire.cpp  PipeWire.h
src/AudioServers/: AudioServer.h  AudioServer.hpp  PipeWire.cpp  PipeWire.h  PipeWire.hpp
src/Config/: Config.cpp  Config.h
src/Core/: Cache.cpp  Cache.h  Config.cpp  Config.h  EventHandler.cpp  EventHandler.h  Globals.cpp  Globals.h  Log.h  PlaylistManager.cpp  PlaylistManager.h  PlaylistModel.cpp  PlaylistModel.h  PlaylistsCache.cpp  PlaylistsCache.h  SortFilterProxyModel.cpp  SortFilterProxyModel.h  Tools.cpp  Tools.h
src/Core/Audio/: AudioServer.h  PipeWire.cpp  PipeWire.h
src/Core/DBus/: MediaPlayer2.cpp  MediaPlayer2.h  org.mpris.MediaPlayer2.Player.xml  org.mpris.MediaPlayer2.xml
src/Core/Playlist/: History.cpp  History.h  PlaylistManager.cpp  PlaylistManager.h  PlaylistModel.cpp  PlaylistModel.h  PlaylistProxyModel.cpp  PlaylistProxyModel.h
src/Core/TagReaders/: ID3v2Reader.cpp  TagReader.h
src/DBus/: MediaPlayer2.cpp  MediaPlayer2.h  org.mpris.MediaPlayer2.Player.xml  org.mpris.MediaPlayer2.xml
src/DataBase/: SQLiteHandler.cpp  SQLiteHandler.h
src/Decoders/: Decoder.h  MP3Decoder.cpp
src/TagReaders/: ID3v2Reader.cpp  TagReader.h  TagReader.hpp
src/Widgets/: ControlsPanel.cpp  ControlsPanel.h  GlobalEventFilter.h  ImageWidget.h  InfoPanel.cpp  InfoPanel.h  InfoWidget.cpp  InfoWidget.h  ListControlsPanel.cpp  ListControlsPanel.h  ListPanel.cpp  ListPanel.h  MainWindow.cpp  MainWindow.hpp  PlaylistControl.cpp  PlaylistControl.h  SongsWidget.cpp  SongsWidget.h  TimeSlider.cpp  TimeSlider.hpp  Window.cpp  Window.h
src/Widgets/Controls/: LineEdit.cpp  LineEdit.h  Slider.h  TimeSlider.cpp  TimeSlider.h
src/Widgets/Playlist/: PlaylistControl.cpp  PlaylistControl.h  PlaylistView.cpp  PlaylistView.h  SongsWidget.cpp  SongsWidget.h
src/audio/: .qmlls.ini  CMakeLists.txt
src/audio/effects/: BassBoostEffect.cpp  BassBoostEffect.json  CMakeLists.txt  EqualizerEffect.cpp  EqualizerEffect.json  GainEffect.cpp  GainEffect.json  ReverbEffect.cpp  ReverbEffect.json
src/audio/effects/common/: CMakeLists.txt
src/audio/effects/common/include/: EffectParameter.h  IAudioEffect.h
src/audio/effects/common/src/: EffectParameter.cpp
src/audio/include/: AudioEffectManager.h  FFmpegAudioDevice.h  MusicPlayer.h  libav.h
src/audio/src/: AudioEffectManager.cpp  FFmpegAudioDevice.cpp  MusicPlayer.cpp
src/common/: CMakeLists.txt
src/common/include/: Log.h  SongMetadata.h  Utils.h
src/common/src/: SongMetadata.cpp  Utils.cpp
src/core/: CMakeLists.txt
src/core/include/: DiskImageCache.h  ICache.h  IDiskCache.h  ISingleton.h
src/core/src/: DiskImageCache.cpp  EventsHandler.cpp  ICache.cpp
src/gui/: CMakeLists.txt
src/gui/presentation/: CMakeLists.txt  main.qml  qmldir
src/gui/presentation/components/: ObjectLoader.qml  RoundedImage.qml  SearchTextField.qml  SettingsGroup.qml  Sidebar.qml  SongsListDelegate.qml  SongsListView.qml  SongsListViewHeader.qml
src/gui/presentation/controls/: ControlsPanel.qml
src/gui/presentation/dialogs/: AudioFileDialog.qml  CreatePlaylistDialog.qml
src/gui/presentation/pages/: Effects.qml  Favorites.qml  Home.qml  Library.qml  Settings.qml
src/gui/presentation/style/: Button.qml  CMakeLists.txt  Colors.qml  Slider.qml  qmldir
src/gui/translations/: CMakeLists.txt  CustomPlayer_en.ts  CustomPlayer_uk.ts
src/gui/utils/: CMakeLists.txt
src/models/: CMakeLists.txt
src/models/include/: FilterProxyModel.h  PlaylistModel.h  PlaylistProvidersRegistry.h  PlaylistsModel.h
src/models/providers/: CMakeLists.txt  code_for_llm.txt
src/models/providers/Network/: NetworkBroadcaster.cpp  NetworkBroadcaster.h  NetworkDiscoverer.cpp  NetworkDiscoverer.h  NetworkPlaylistProvider.cpp  NetworkPlaylistProvider.h  NetworkPlaylistProvider.json  NetworkPlaylistProviderFactory.cpp  NetworkPlaylistSetup.qml  resources.qrc
src/models/providers/UPL/: UPLPlaylistProvider.cpp  UPLPlaylistProvider.h  UPLPlaylistProvider.json  UPLPlaylistProviderFactory.cpp
src/models/providers/cmake/: PlaylistProviderPlugin.cmake
src/models/providers/common/: CMakeLists.txt
src/models/providers/common/include/: IEditablePlaylistProvider.h  IPlaylistProvider.h  IPlaylistProviderFactory.h  IPlaylistProviderInterface.h  PlaylistFormat.h
src/models/src/: DashboardPage_old.qml  FilterProxyModel.cpp  PlaylistModel.cpp  PlaylistProvidersRegistry.cpp  PlaylistsModel.cpp
src/network/: CMakeLists.txt
src/network/include/: BroadcastService.h  PeerInfo.h
src/network/src/: BroadcastService.cpp
src/tags/: CMakeLists.txt
src/tags/include/: ID3V2Handler.h
src/tags/src/: ID3V2Handler.cpp
src/ui/: Application.cpp  CMakeLists.txt  ControlsPanel.cpp  ControlsPanel.h  MainWindow.cpp  MainWindow.h  macros.h
src/ui/Custom/: PushButton.cpp  PushButton.h
src/ui/android/: AndroidManifest.xml
src/ui/android/res/drawable/: icon.xml
src/ui/qml/: Colors.qml  QmlResources.qrc  main.qml  qmldir
src/ui/resources/: Resources.qrc
src/ui/resources/styles/: Default.qss
